[gd_scene load_steps=22 format=2]

[ext_resource path="res://Script's/Gui and Stuff/unispace bd.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Script's/Menu.gd" type="Script" id=2]
[ext_resource path="res://Images/mainsprite/Triangulo .png" type="Texture" id=3]
[ext_resource path="res://Tema.tres" type="Theme" id=4]
[ext_resource path="res://Images/mainsprite/Void/Abrindo olho/VoidOlhos1.png" type="Texture" id=5]
[ext_resource path="res://Images/mainsprite/Void/Abrindo olho/VoidOlhos3.png" type="Texture" id=6]
[ext_resource path="res://Images/mainsprite/Void/Abrindo olho/VoidOlhos7.png" type="Texture" id=7]
[ext_resource path="res://Images/mainsprite/Void/Abrindo olho/VoidOlhos8.png" type="Texture" id=8]
[ext_resource path="res://Images/mainsprite/Void/Abrindo olho/VoidOlhos2.png" type="Texture" id=9]
[ext_resource path="res://Images/mainsprite/Void/Abrindo olho/VoidOlhos4.png" type="Texture" id=10]
[ext_resource path="res://Images/mainsprite/Void/Abrindo olho/VoidOlhos5.png" type="Texture" id=11]
[ext_resource path="res://Images/mainsprite/Void/Abrindo olho/VoidOlhos6.png" type="Texture" id=12]

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0.0350877, 0.245614, 0.675439, 1 )
colors = PoolColorArray( 0.764706, 0.764706, 0.764706, 0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0.258824 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=4]
lifetime_randomness = 0.37
flag_disable_z = true
direction = Vector3( 1, -100, 0 )
flatness = 0.13
gravity = Vector3( 0, 0, 0 )
initial_velocity = 200.0
angular_velocity = 76.8
angular_velocity_random = 0.55
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 96.0
angle_random = 0.29
scale = 0.5
scale_random = 0.68
color_ramp = SubResource( 6 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 9 ), ExtResource( 6 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=1]
size = 55
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 55
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 55
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 35
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer"]
layer = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ 360.0 ],
"_edit_vertical_guides_": [ 640.0 ]
}

[node name="Particles2D" type="Particles2D" parent="."]
modulate = Color( 1, 1, 1, 0.784314 )
position = Vector2( 650, 753 )
amount = 50
lifetime = 5.0
explosiveness = 0.12
randomness = 0.14
fixed_fps = 60
draw_order = 1
process_material = SubResource( 4 )
texture = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 1307, 763 )
scale = Vector2( 70, 70 )
frames = SubResource( 9 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.760784 )

[node name="Pause" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Pause"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Control" type="Control" parent="Pause/HBoxContainer"]
margin_right = 200.0
margin_bottom = 720.0
rect_min_size = Vector2( 200, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Pause/HBoxContainer"]
margin_left = 204.0
margin_right = 612.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Pause/HBoxContainer/CenterContainer"]
margin_top = 166.0
margin_right = 408.0
margin_bottom = 554.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 350, 0 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/separation = 30
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Pause/HBoxContainer/CenterContainer/VBoxContainer"]
margin_right = 408.0
margin_bottom = 67.0
custom_fonts/font = SubResource( 1 )
text = "InfinityVoid"

[node name="Control" type="Control" parent="Pause/HBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 97.0
margin_right = 408.0
margin_bottom = 97.0

[node name="Play" type="Button" parent="Pause/HBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 127.0
margin_right = 408.0
margin_bottom = 194.0
custom_fonts/font = SubResource( 2 )
text = "Iniciar"

[node name="Continue" type="Button" parent="Pause/HBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 224.0
margin_right = 408.0
margin_bottom = 291.0
custom_fonts/font = SubResource( 2 )
text = "Continuar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="Pause/HBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 321.0
margin_right = 408.0
margin_bottom = 388.0
custom_fonts/font = SubResource( 3 )
text = "Sair"

[node name="Idioma" type="Button" parent="."]
margin_left = 25.0
margin_top = 24.0
margin_right = 185.0
margin_bottom = 73.0
theme = ExtResource( 4 )
custom_fonts/font = SubResource( 8 )
text = "PT-BR"

[node name="Label" type="Label" parent="."]
margin_left = 302.0
margin_top = 593.0
margin_right = 512.0
margin_bottom = 654.0
custom_fonts/font = SubResource( 7 )
text = "Alpha 0.1 "

[connection signal="pressed" from="Pause/HBoxContainer/CenterContainer/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Pause/HBoxContainer/CenterContainer/VBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="Pause/HBoxContainer/CenterContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Idioma" to="." method="_on_Idioma_pressed"]
